...
        android:minWidth="0dp"
        android:text="-"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></Button>

    <EditText
        android:id="@+id/countInput"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:inputType="number"
        android:textAlignment="center"
        android:text="1"
        app:layout_constraintStart_toEndOf="@+id/decrementBtn"
...
