...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/textView22"
        app:layout_constraintTop_toTopOf="parent"></Spinner>

    <ListView
        android:id="@+id/itemList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:drawSelectorOnTop="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displaySpinner"
        tools:layout_editor_absoluteX="115dp"></ListView>
...
