...
        app:showAsAction="always"
        android:tooltipText="Upravit tašku"
        ></item>

    <item
        android:id="@+id/donateBag"
        android:title="Odevzdat tašku"
        android:tooltipText="Odevzdat tašku"></item>

</menu>
