<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DonateBagActivity">

    <ListView
        android:id="@+id/charityList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/donateBtn"
        app:layout_constraintTop_toTopOf="parent"></ListView>

    <Button
        android:id="@+id/donateBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Odevzdat"
        app:layout_constraintBottom_toBottomOf="parent"></Button>

</androidx.constraintlayout.widget.ConstraintLayout>